--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_html: ^1.0.0-pre.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  # cupertino_icons: ^0.1.3
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +48,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
