--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,8 +6,8 @@
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
     <application
-        android:name="io.flutter.app.FlutterApplication"
-        android:label="mood_journal"
+        android:name="org.raitech.thoughtsjournal"
+        android:label="Simple Thoughts Journal"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
